# cargo-aoc

./: Cargo.toml
aoc-runner/: Cargo.toml
aoc-runner-derive/: Cargo.toml
aoc-runner-internal/: Cargo.toml
cargo-aoc/: Cargo.toml
cargo-aoc/src/: app.rs  date.rs  main.rs
cargo-aoc/template/: Cargo-bench.toml.tpl  Cargo-run.toml.tpl
cargo-aoc/template/benches/: gen.rs.tpl  gen_impl.rs.tpl  impl.rs.tpl  part.rs.tpl
