[package]
name = "cargo-aoc"
version = "0.4.0"
authors = ["Grégory Obanos <gregory.obanos@gmail.com>", "Olivier Pinon <oliv.pinon@gmail.com>"]
description = "Cargo Advent of Code Helper"
license = "MIT/Apache-2.0"
repository = "https://github.com/gobanos/cargo-aoc"
readme = "../README.md"
include = ["Cargo.toml", "src/**/*", "template/**/*.tpl", "../README.md"]

[dependencies]
aoc-runner-internal = { path = "../aoc-runner-internal" }
# aoc-runner-internal = "0.1.0"
toml = "0.8"
clap = "4"
chrono = "0.4"
chrono-tz = "0.8"
reqwest = { version = "0.11", features = ["blocking"] }
webbrowser = "0.8"
directories = "5"
